tests/return/return.exp
Error ------------------------------------------------------------------------------------------ function_return.js:7:24

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   7| function f(x: number): number {
                             ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ function_return.js:23:3

Cannot return undefined because undefined [1] is incompatible with number [2]. [incompatible-type]

   function_return.js:23:3
   23|   return;
         ^^^^^^^ [1]

References:
   function_return.js:19:24
   19| function h(x: number): number {
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- implicit.js:6:22

Cannot expect number as the return type of async function because number [1] is incompatible with implicitly-returned
`Promise`. [incompatible-type]

   6| async function g1(): number {}
                           ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- implicit.js:7:30

Cannot expect `Promise` as the return type of async function because in type argument `R` [1]: number [2] is
incompatible with implicitly-returned undefined. [incompatible-type]

   implicit.js:7:30
      7| async function g2(): Promise<number> {}
                                      ^^^^^^ [2]

References:
   <BUILTINS>/core.js:2285:24
   2285| declare class Promise<+R = mixed> {
                                ^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:185:19

Cannot use `invariant()` [1] as a superclass. Only variables and member expressions may be extended [invalid-extends]

   185|   class C extends invariant() {
                          ^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:234:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   234| function g1(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:241:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   241| function g2(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:249:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   249| function g3(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:257:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   257| function g4(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:265:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   265| function g5(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:274:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   274| function g6(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:282:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   282| function g7(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:295:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   295| function g8(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:308:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   308| function g9(): number { // Error
                       ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:323:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   323| function g10(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:329:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   329| function g11(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:336:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   336| function g12(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:352:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   352| function g13(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:357:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   357| function g14(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:364:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   364| function g15(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:371:17

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   371| function g16(): number { // Error
                        ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:378:26

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   378| function g17(x: Object): number { // Error
                                 ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:386:35

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   386| function g18(x: 'a' | 'b' | 'c'): number { // Error
                                          ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:395:26

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   395| function g19(x: string): number { // Error
                                 ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:403:38

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   403| function g20(x: number, y: boolean): number { // Error
                                             ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:415:38

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   415| function g21(x: number, b: boolean): number { // Error
                                             ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ implicit_void.js:427:27

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   427| function g22(b: boolean): number { // Error
                                  ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- void.js:12:2

Cannot cast `f(...)` to undefined because string [1] is incompatible with undefined [2]. [incompatible-type]

   void.js:12:2
   12| (f(true): void); // error: string ~> void
        ^^^^^^^

References:
   void.js:8:12
    8|     return "nope";
                  ^^^^^^ [1]
   void.js:12:11
   12| (f(true): void); // error: string ~> void
                 ^^^^ [2]



Found 28 errors
